--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
                 });
 
                 alert("✅ Registration successful! You can now login.");
-                window.location.href = "auth.html";
+                window.location.href = "login.html";
             } catch (error) {
                 alert("❌ Error: " + error.message);
             }
