--- a/register.html
+++ b/register.html
@@ -22,6 +22,7 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
+    // Register Student
     window.registerStudent = async function(event) {
       event.preventDefault();
 
@@ -30,7 +31,6 @@
       const grade = document.getElementById("grade").value;
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
-      const messageBox = document.getElementById("message");
 
       try {
         const userCredential = await createUserWithEmailAndPassword(auth, email, password);
@@ -44,16 +44,10 @@
           registeredAt: new Date().toISOString()
         });
 
-        messageBox.style.color = "green";
-        messageBox.innerText = "✅ Registration successful! Redirecting to login...";
-
-        setTimeout(() => {
-          window.location.href = "login.html";
-        }, 2000);
-
+        alert("🎉 Registration successful! Welcome " + fullname + "!");
+        window.location.href = "student-dashboard.html";
       } catch (error) {
-        messageBox.style.color = "red";
-        messageBox.innerText = "❌ Error: " + error.message;
+        alert("❌ Error: " + error.message);
       }
     };
   </script>
@@ -76,16 +70,16 @@
   </nav>
 
   <section>
-    <h2>Student Registration</h2>
-    <form class="register-form" onsubmit="registerStudent(event)">
+    <h2>📝 Student Registration</h2>
+    <form onsubmit="registerStudent(event)">
       <label for="fullname">Full Name:</label>
-      <input type="text" id="fullname" name="fullname" required>
+      <input type="text" id="fullname" required>
 
       <label for="email">Email Address:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" required>
 
       <label for="grade">Grade:</label>
-      <select id="grade" name="grade" required>
+      <select id="grade" required>
         <option value="">Select Grade</option>
         <option value="8">Grade 8</option>
         <option value="9">Grade 9</option>
@@ -93,17 +87,13 @@
       </select>
 
       <label for="username">Choose a Username:</label>
-      <input type="text" id="username" name="username" required>
+      <input type="text" id="username" required>
 
       <label for="password">Create Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" required>
 
       <button type="submit">Register</button>
     </form>
-
-    <!-- Message appears here -->
-    <p id="message" style="font-weight:600; margin-top:10px;"></p>
-
     <p>Already registered? <a href="login.html">Login here</a>.</p>
   </section>
 
