--- a/timetable.html
+++ b/timetable.html
@@ -1,70 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Class Timetables - St Paul Learning Centre</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Timetable - St Paul Learning Centre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Top Navbar -->
-    <div class="navbar">
-        <span class="menu-btn" onclick="openMenu()" tabindex="0" aria-label="Main menu">&#9776;</span>
-        <div class="navbar-center">
-            <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
-            <span class="logo-text">St Paul Learning Centre</span>
-        </div>
-    </div>
+  <header>
+    <h1>St Paul Learning Centre</h1>
+    <div class="motto">Strive For Success</div>
+    <p>Empowering students, connecting families, supporting teachers.</p>
+  </header>
 
-    <!-- Sidebar Menu -->
-    <nav id="sideMenu" class="side-menu" aria-label="Sidebar navigation">
-        <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()" tabindex="0" aria-label="Close menu">&times;</a>
-        <a href="index.html">News & Announcements</a>
-        <a href="student-portal.html">Student Portal</a>
-        <a href="admissions.html">Admissions</a>
-        <a href="resources.html">Resources</a>
-        <a href="showcase.html">About Us</a>
-        <a href="contact.html">Contact</a>
-        <a href="timetable.html">Timetable</a>
-        <a href="teacher-resources.html">Teacher Resources</a>
-        <a href="parent-portal.html">Parent Portal</a>
-    </nav>
+  <nav>
+    <a href="student-dashboard.html">Dashboard</a>
+    <a href="timetable.html">Timetable</a>
+    <a href="notes.html">Notes</a>
+    <a href="homework.html">Homework</a>
+    <a href="logout.html">Logout</a>
+  </nav>
 
-    <header>
-        <h1>St Paul Learning Centre</h1>
-        <div class="motto">Strive For Success</div>
-        <p>Empowering students, connecting families, supporting teachers.</p>
-    </header>
+  <section>
+    <h2>📅 Weekly Timetable</h2>
+    <table border="1" cellpadding="10">
+      <tr>
+        <th>Day</th><th>8:00 - 10:00</th><th>10:30 - 12:30</th><th>2:00 - 4:00</th>
+      </tr>
+      <tr>
+        <td>Monday</td><td>Mathematics</td><td>English</td><td>Science</td>
+      </tr>
+      <tr>
+        <td>Tuesday</td><td>History</td><td>Geography</td><td>ICT</td>
+      </tr>
+      <tr>
+        <td>Wednesday</td><td>Mathematics</td><td>Biology</td><td>Sports</td>
+      </tr>
+      <tr>
+        <td>Thursday</td><td>English</td><td>Chemistry</td><td>Music</td>
+      </tr>
+      <tr>
+        <td>Friday</td><td>Physics</td><td>Art</td><td>Debate Club</td>
+      </tr>
+    </table>
+  </section>
 
-    <section>
-        <h2>Class Timetables</h2>
-        <p>View and download class timetables for each grade and subject. Please check for updates regularly!</p>
-        <ul class="feature-list">
-            <li><a href="#">Grade 8 Timetable</a></li>
-            <li><a href="#">Grade 9 Timetable</a></li>
-            <li><a href="#">Grade 10 Timetable</a></li>
-            <!-- Add more links as needed -->
-        </ul>
-    </section>
-
-    <footer>
-        &copy; 2025 St Paul Learning Centre. All rights reserved.
-    </footer>
-
-    <!-- Sidebar Menu JS -->
-    <script>
-        function openMenu() {
-            document.getElementById("sideMenu").style.width = "260px";
-        }
-        function closeMenu() {
-            document.getElementById("sideMenu").style.width = "0";
-        }
-        document.addEventListener('keydown', function(event) {
-            if (event.key === "Escape") {
-                closeMenu();
-            }
-        });
-    </script>
+  <footer>
+    &copy; 2025 St Paul Learning Centre. All rights reserved.
+  </footer>
 </body>
 </html>
