--- a/register.html
+++ b/register.html
@@ -104,7 +104,7 @@
       <button type="submit">Register</button>
     </form>
     <p id="message" style="font-weight:bold; margin-top:10px;"></p>
-    <p>Already registered? <a href="login.html">Login here</a>.</p>
+    <p>Already registered? <a href="student-dashboard.html.html">Login here</a>.</p>
   </section>
 
   <footer>
